--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.2/gh-fork-ribbon.min.css" />
 
+    <!-- some CodeMirror themes -->
+    <link rel="stylesheet" href="https://codemirror.net/theme/monokai.css" />
+    <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316871/summerfruit.css" />
+    <link rel="stylesheet" href="https://s3-us-west-2.amazonaws.com/s.cdpn.io/316871/fairyfloss.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
+    <!-- Configure and load Thebe !-->
+  <script type="text/x-thebe-config">
+    {
+      bootstrap: true,
+      binderOptions: {
+        repo: "jupyter-widgets/ipyleaflet",
+        ref: "0.9.0"
+      },
+      kernelOptions: {
+        name: "python3"
+      }
+    }
+  </script>
+  <script type="text/javascript"
+      src="https://unpkg.com/thebelab@^0.3.0"></script>
   </head>
   <body>
     <textarea id="source"></textarea>
@@ -40,6 +61,6 @@
             ]});
         }
       var slideshow = remark.create(options, renderMath);
-      </script>
+    </script>
   </body>
 </html>
